# web_server

./: .gitignore  Cargo.toml  build.rs  build.sh  callback.html
proto/: helloworld.proto  test1.proto
src/: audio.rs  auth.rs  broadcast.rs  clips.rs  errors.rs  grpc.rs  main.rs  permissions.rs  user.rs  waveform.rs  websocket.rs
