[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = { version = "0.11" }