[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
# postgres = "0.19.4"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
jsonwebtoken = "8"
env_logger = "0.10"
time = "0.3"
serde_repr = "0.1"
tonic="0.8"
tokio="1.23"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"