[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["process"] }
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
actix-rt = "2.9.0"
actix-cors = "0.6"
actix-files = "0.6"
openssl = { version = "0.10", features = ["v110"] }
actix-web-lab = "0.19.1"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
# postgres = "0.19.4"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres"] }
jsonwebtoken = "8"
env_logger = "0.10"
time = "0.3"
serde_repr = "0.1"
tonic = "0.8"
prost = "0.11"
bitflags = "2.0.2"
thiserror = "1.0.43"
once_cell = "1.10.0"
actix-web-actors = "4.2.0"
tokio-util = "0.7.8"
parking_lot = "0.12.1"


[build-dependencies]
tonic-build = "0.8"
